@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-09T00:41:07Z",
-  "count_outdated" : 53,
-  "uniques_outdated" : 20,
+  "timestamp" : "2022-09-12T16:11:08Z",
+  "count_outdated" : 54,
+  "uniques_outdated" : 21,
   "count" : 64,
   "uniques" : 26,
   "views" : [
-    {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 2,
